--- a/Makefile.dns
+++ b/Makefile.dns
@@ -7,14 +7,14 @@ SOURCES_CLNT.c =
 SOURCES_CLNT.h = 
 SOURCES_SVC.c = linkedlist.c
 SOURCES_SVC.h = linkedlist.h
-SOURCES.x = dns.x
+SOURCES.x = 
 
-TARGETS_SVC.c = dns_svc.c dns_server.c dns_xdr.c 
+TARGETS_SVC.c = dns_svc.c dns_server.c dns_xdr.c
 TARGETS_CLNT.c = dns_clnt.c dns_client.c dns_xdr.c 
 TARGETS = dns.h dns_xdr.c dns_clnt.c dns_svc.c dns_client.c dns_server.c
 
 OBJECTS_CLNT = $(SOURCES_CLNT.c:%.c=%.o) $(TARGETS_CLNT.c:%.c=%.o)
-OBJECTS_SVC = $(SOURCES_SVC.c:%.c=%.o) $(TARGETS_SVC.c:%.c=%.o)
+OBJECTS_SVC = $(SOURCES_SVC.c:%.c=%.o) $(TARGETS_SVC.c:%.c=%.o) dns_clnt.o
 # Compiler flags 
 
 CFLAGS += -g -Wall `pkg-config --cflags libtirpc`
